PyLucene and UUIDext are now building in 'internal' on OS X.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2155 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/PyLucene/Makefile
+++ b/internal/PyLucene/Makefile
@@ -1,9 +1,10 @@
 
-VERSION=1.3-final
-PYLUCENE=$(BUILD_ROOT)/persistence/PyLucene
-LUCENE=$(PYLUCENE)/lucene-$(VERSION)
+include ../Makefile.inc
 
-include $(BUILD_ROOT)/Makefile.inc
+VERSION=1.3-final
+PYLUCENE=$(INTERNAL)/PyLucene
+LUCENE=$(PYLUCENE)/lucene-$(VERSION)
+DB=$(EXTERNAL)/persistence/db/db-4.2.52
 
 ifeq ($(DEBUG),1)
 COMP_OPT=DEBUG=1
@@ -30,15 +31,17 @@ BUILD=build_$(SNAP)
 
 ifeq ($(OS),Cygwin)
 
-build: apply
+build: sources apply
 	MAKEFLAGS=; \
 	$(MAKE) -f $(OS_MAKE) GCJ=`cygpath -aw $(GCJ_HOME)` $(COMP_OPT) \
-                              DBVERSION=4.2.52 VERSION=$(VERSION) \
+                              DB=`cygpath -aw $(DB)` \
+                              RELDIR=`cygpath -aw $(BUILD_ROOT)/$(SNAP)` \
+                              VERSION=$(VERSION) \
                               all install
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYLUCENE)/$(SNAP).tar.gz \
+        tar -cvzf $(PYLUCENE)/PyLucene-$(SNAP).tar.gz \
                   $(SNAP)/$(SITE)/PyLucene.py \
                   $(SNAP)/$(SITE)/_PyLucene$(_SUFFIX).pyd \
                   $(SNAP)/bin/libdb_java42$(SUFFIX).dll
@@ -49,7 +52,7 @@ ifeq ($(OS),Darwin)
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYLUCENE)/$(SNAP).tar.gz \
+        tar -cvzf $(PYLUCENE)/PyLucene-$(SNAP).tar.gz \
                   $(SNAP)/$(SITE)/PyLucene.py \
                   $(SNAP)/$(SITE)/_PyLucene.so \
                   $(SNAP)/db/lib/libdb_java-4.2.jnilib \
@@ -62,7 +65,7 @@ else
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYLUCENE)/$(SNAP).tar.gz \
+        tar -cvzf $(PYLUCENE)/PyLucene-$(SNAP).tar.gz \
                   $(SNAP)/$(SITE)/PyLucene.py \
                   $(SNAP)/$(SITE)/_PyLucene.so \
                   $(SNAP)/db/lib/libdb_java-4.2.so \
@@ -72,20 +75,23 @@ snap:
 
 endif
 
-build: apply
+build: sources apply
 	MAKEFLAGS=; \
 	$(MAKE) -f $(OS_MAKE) GCJ=$(GCJ_HOME) $(COMP_OPT) \
-                              DBVERSION=4.2.52 VERSION=$(VERSION) \
+                              DB=$(DB) VERSION=$(VERSION) \
+                              RELDIR=$(BUILD_ROOT)/$(SNAP) \
                               all install
 
 endif
 
+sources:
+	if [ ! -d lucene-$(VERSION) ]; then \
+            tar xvzf lucene-$(VERSION)-src.tar.gz; \
+        fi
+
 apply: patches
 	patch -Nup0 < patches; echo ok
 	make -C $(BUILD_ROOT)/persistence/db apply
-
-expand: lucene-$(VERSION)-src.tar.gz
-	tar xvzf lucene-$(VERSION)-src.tar.gz
 
 clean:
 	rm -rf $(BUILD)
