made env target appendable
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2166 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -39,7 +39,7 @@ endif
 
 default: all
 
-env:
+env::
 	@echo Operating system is $(OS)
 ifeq ($(BUILD_ROOT),)
 	@echo BUILD_ROOT is not set && false
