introduced individual versions for the internal systems
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2168 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile.inc
+++ b/internal/Makefile.inc
@@ -1,6 +1,8 @@
 
 EXTERNAL=$(BUILD_ROOT)
-INTERNAL=$(BUILD_ROOT)/../internal
+INTERNAL=$(dir $(BUILD_ROOT))internal
 
 include $(EXTERNAL)/Makefile.inc
 
+env::
+	@echo INTERNAL is $(INTERNAL)
