Refine curl command - previous form might fail and still leave an empty output file
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2171 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -39,7 +39,7 @@ sources:
 	tar -cvf sources-$(VERSION).tar $(SOURCES)
 
 sources-$(VERSION).tar:
-	curl http://builds.osafoundation.org/external/sources-$(VERSION).tar > sources-$(VERSION).tar
+	curl -O http://builds.o11n.org/external/sources-$(VERSION).tar
 
 expand: env sources-$(VERSION).tar
 	tar xvf sources-$(VERSION).tar
