added compilers target for OS X and Cygwin that gets the compilers needed by PyLucene to be downloaded from downloads.osafoundation.org
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2183 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -74,3 +74,18 @@ clean: env
 	do \
 	    $(MAKE) -C $$system -k DEBUG=$(DEBUG) clean; \
 	done
+
+
+HOST=http://downloads.osafoundation.org/compilers
+
+ifeq ($(OS),Cygwin)
+compilers: mingw-3.1.zip
+mingw-3.1.zip:
+	curl -O $(HOST)/windows/mingw-3.1.zip
+endif
+
+ifeq ($(OS),Darwin)
+compilers: gcc-3.4-20040107.tar.bz2
+gcc-3.4-20040107.tar.bz2:
+	curl -O $(HOST)/osx/gcc-3.4-20040107.tar.bz2
+endif
