added upload target and added missing wx libs for OS X
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2185 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -24,3 +24,9 @@ clean: env
 	do \
 	    $(MAKE) -C $$system -k DEBUG=$(DEBUG) clean; \
 	done
+
+upload:
+	@for system in $(SYSTEMS); \
+        do \
+            $(MAKE) -C $$system DEBUG=$(DEBUG) upload; \
+        done
