fixed Makefile DEBUG bug
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2239 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -30,7 +30,7 @@ wxWidgets:
         export WXWIN=`cygpath -aw $(SRC)`; MAKEFLAGS=; \
 	devenv.com build/msw/msw.sln /build $(Snap)
 	mkdir -p $(PREFIX)/$(SITE)/wx
-	install $(SRC)/lib/vc_dll/*251*_vc$(SUFFIX).dll $(PREFIX)/$(SITE)/wx
+	install $(SRC)/lib/vc_dll/*251$(SUFFIX)_*_vc.dll $(PREFIX)/$(SITE)/wx
 
 wxPython:
 	cd $(SRC)/wxPython; \
