cygwin tar -c is broken because of text vs. binary file confusion. modified Makefile to not use -c
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2248 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -57,8 +57,9 @@ binaries: env
 	@for system in $(SYSTEMS); \
 	do \
 	    echo appending $$system; \
-	    gunzip -c $$system/$(SNAP).tar.gz > _tmp.tar; \
-            tar -Af $(SNAP)-$(VERSION).tar _tmp.tar; \
+	    cp $$system/$(SNAP).tar.gz _tmp.tar.gz; \
+	    gunzip -f _tmp.tar.gz; \
+        tar -Af $(SNAP)-$(VERSION).tar _tmp.tar; \
 	    rm _tmp.tar; \
 	done
 	gzip $(SNAP)-$(VERSION).tar
