verified windows mingw install
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2257 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -99,7 +99,7 @@ compiler=$(BUILD_ROOT)/mingw-3.1
 
 $(compiler): mingw-3.1.zip
 	cd $(BUILD_ROOT); \
-	gunzip mingw-3.1.zip
+	unzip mingw-3.1.zip
 
 mingw-3.1.zip:
 	cd $(BUILD_ROOT); \
