--- a/internal/PyLucene/Makefile.dev
+++ b/internal/PyLucene/Makefile.dev
@@ -20,6 +20,7 @@ endif
 
 SRCDIR = .
 BINDIR = build_$(mode)
+RELDIR = /usr/local
 
 CLASSES = $(BINDIR)/classes
 CC = $(GCJ_HOME)/bin/gcc
@@ -56,7 +57,7 @@ $(BINDIR)/db.o: $(BINDIR)/db_const.o
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)/db.o --classpath=$(CLASSES) $(DB_SRCS)
 
 $(BINDIR)/libdb_java-4.2.jnilib:
-	$(CC) -shared -bundle -o $(BINDIR)/libdb_java-4.2.jnilib -O $(LDFLAGS) -I$(DB) -I$(DB)/build_$(mode) -I/usr/local/BerkeleyDB.4.2/include $(DB)/libdb_java/db_java_wrap.c ../../external/$(mode)/db/lib/libdb-4.2.dylib
+	$(CC) -shared -bundle -o $(BINDIR)/libdb_java-4.2.jnilib -O $(LDFLAGS) -I$(DB) -I$(GCJ_HOME)/include -I$(DB)/build_$(mode) -I/usr/local/BerkeleyDB.4.2/include $(DB)/libdb_java/db_java_wrap.c ../../external/$(mode)/db/lib/libdb-4.2.dylib
 
 $(BINDIR)/store.o: $(BINDIR)/db.o $(BINDIR)/lucene.o
 	$(JCC) -C -d $(CLASSES) --classpath=$(CLASSES) $(STORE_SRCS)
@@ -67,7 +68,7 @@ $(BINDIR)/reader.java.o: java/org/osafoundation/io/PythonReader.java
 	$(JCC) $(CCFLAGS) -c -o $(BINDIR)/reader.java.o java/org/osafoundation/io/PythonReader.java
 
 $(BINDIR)/reader.cpp.o: $(CLASSES)/org/osafoundation/io/PythonReader.h cpp/PythonReader.cpp $(BINDIR)/reader.java.o
-	$(JCC) -I$(PYTHON_INC) -I$(CLASSES) $(CCFLAGS) -c -o $(BINDIR)/reader.cpp.o cpp/PythonReader.cpp
+	$(JCC) -I$(PYTHON_INC) -I$(GCJ_HOME)/include -I$(CLASSES) $(CCFLAGS) -c -o $(BINDIR)/reader.cpp.o cpp/PythonReader.cpp
 
 $(CLASSES)/org/osafoundation/io/PythonReader.h:
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbEnv
@@ -91,7 +92,7 @@ PyLucene_wrap.cxx: PyLucene.i $(BINDIR)/reader.java.o
 	swig -modern -I$(BINDIR)/classes -c++ -python PyLucene.i
 
 $(BINDIR)/_PyLucene.so: $(OBJS) PyLucene_wrap.cxx
-	$(CXX) -shared -bundle -o $(BINDIR)/_PyLucene.so $(CCFLAGS) -I$(CLASSES) -I$(PYTHON_INC) -I/usr/local/BerkeleyDB.4.2/include -I$(GCJ_HOME)/include PyLucene_wrap.cxx $(BINDIR)/db_const.o $(BINDIR)/db.o $(BINDIR)/store.o $(BINDIR)/lucene.o $(BINDIR)/reader.java.o $(BINDIR)/reader.cpp.o -lgcj -liconv -flat_namespace -multiply_defined suppress -undefined warning
+	$(CXX) -dynamic -bundle -o $(BINDIR)/_PyLucene.so $(CCFLAGS) -I$(CLASSES) -I$(PYTHON_INC) -I/usr/local/BerkeleyDB.4.2/include -I$(GCJ_HOME)/include PyLucene_wrap.cxx $(BINDIR)/db_const.o $(BINDIR)/db.o $(BINDIR)/store.o $(BINDIR)/lucene.o $(BINDIR)/reader.java.o $(BINDIR)/reader.cpp.o -lgcj -liconv -flat_namespace -multiply_defined suppress -undefined warning
 
 all: $(BINDIR)/_PyLucene.so $(BINDIR)/libdb_java-4.2.jnilib PyLucene_wrap.cxx
 	echo build of $(BINDIR)/_PyLucene.so complete
