Added launcher scripts (RunPython and RunChandler for all platforms, debug and release).  During "make build", the appropriate scripts are copied/renamed from the scripts directory to external/debug|release. Commented out the building of the launchers for the moment.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2334 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/Makefile
+++ b/internal/launchers/Makefile
@@ -6,10 +6,16 @@ LAUNCHERS=$(INTERNAL)/launchers
 
 BUILD=build_$(SNAP)
 
-ifeq ($(DEBUG),1)
-    DEBUG=$DEBUG
+# ifeq ($(DEBUG),1)
+#     DEBUG=$DEBUG
+# else
+#     undef DEBUG
+# endif
+
+ifeq ($(PLATFORM),windows)
+    SCRIPT_EXTENTION=".bat"
 else
-    undef DEBUG
+    SCRIPT_EXTENTION=
 endif
 
 ifeq ($(OS),Darwin)
@@ -20,10 +26,12 @@ ARCHIVE: $(LAUNCHERS)/linux/$(BUILD)/chandler \
          $(LAUNCHERS)/win/
 
 build:
-	cd $(LAUNCHERS)/linux; \
-	make; \
-	cd $(LAUNCHERS)/win;
-	make
+	cp $(LAUNCHERS)/scripts/RunChandler.$(SNAP).$(PLATFORM) $(BUILD_ROOT)/$(SNAP)/RunChandler$(SCRIPT_EXTENTION)
+	cp $(LAUNCHERS)/scripts/RunPython.$(SNAP).$(PLATFORM) $(BUILD_ROOT)/$(SNAP)/RunPython$(SCRIPT_EXTENTION)
+#	cd $(LAUNCHERS)/linux; \
+#	make; \
+#	cd $(LAUNCHERS)/win;
+#	make
 
 snap: 
 	cd $(BUILD_ROOT); \
