hacks to set cygwin environment
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2340 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -3,7 +3,8 @@ include Makefile.inc
 
 SYSTEMS=PyLucene \
         UUIDext \
-        wxPython-2.5
+        wxPython-2.5 \
+	launchers
 
 .PHONY: binaries $(SYSTEMS)
 
