--- a/internal/launchers/win/Makefile
+++ b/internal/launchers/win/Makefile
@@ -1,5 +1,12 @@
-chandler.exe: winlaunch.c
-	devenv launcher.sln /build DEBUG /out output.txt
+include ../../Makefile.inc
+
+build:	chandler.exe
+
+chandler.exe: winlaunch/winlaunch.c
+	devenv.com launcher.sln /build $(SNAP)
+
+clean:
+	rm $@ 
 
 
 
