--- a/internal/launchers/win/Makefile
+++ b/internal/launchers/win/Makefile
@@ -4,6 +4,7 @@ build:	chandler.exe
 
 chandler.exe: winlaunch/winlaunch.c
 	devenv.com launcher.sln /build $(SNAP)
+	cp winlaunch/$(Snap)/chandler.exe $(BUILD_ROOT)/$(SNAP)
 
 clean:
 	rm $@ 
