Removed an extraneous underscore
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2344 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -18,6 +18,7 @@ SUFFIX=
 endif
 
 
+
 BUILD=build_$(SNAP)
 
 .PHONY: wxWidgets wxPython
@@ -31,7 +32,7 @@ wxWidgets:
 	. $(BUILD_ROOT)/cygenv.sh; \
 	devenv.com build/msw/msw.sln /build $(Snap)
 	mkdir -p $(PREFIX)/$(SITE)/wx
-	install $(SRC)/lib/vc_dll/*251$(SUFFIX)_*_vc.dll $(PREFIX)/$(SITE)/wx
+	install $(SRC)/lib/vc_dll/*251$(SUFFIX)*_vc.dll $(PREFIX)/$(SITE)/wx
 
 wxPython:
 	cd $(SRC)/wxPython; \
