Removed some extraneous quotes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2345 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/Makefile
+++ b/internal/launchers/Makefile
@@ -44,7 +44,7 @@ endif
 
 ifeq ($(OS),Linux)
 
-LAUNCHER_FILES="$(SNAP)/chandler $(SNAP)/chandler_bin"
+LAUNCHER_FILES=$(SNAP)/chandler $(SNAP)/chandler_bin
 
 ARCHIVE: $(LAUNCHERS)/linux/
 
