re-added installer Makefile
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2347 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -1,30 +1,49 @@
-# Make file for new chandler
 
-include ../external/Makefile.inc
+# This Makefile requires cygwin on Windows
+# It should *not* be made to depend on external/internal
 
-DEPS =../external/persistence/db/db-4.2.52.tar.gz \
-	  ../external/python/Python-2.3.3.tgz \
-	  ../external/python/bzip2-1.0.2.tar.gz \
-	  ../external/python/zlib-1.2.1.tar.gz \
-	  ../external/epydoc/epydoc-2.0.tar.gz \
-	  ../external/persistence/xerces-c/xerces-c-src2_4_0.tar.gz \
-	  ../external/persistence/pathan/libpathan-1.2-2-src.tar.gz \
-	  ../external/persistence/dbxml/dbxml-1.2.1.tar.gz \
-	  ../external/persistence/libxml2/libxml2-2.6.3.tar.gz \
-	  ../external/persistence/libxslt/libxslt-1.1.2.tar.gz \
-	  ../external/pyxml/PyXML-0.8.3.tar.gz \
-	  ../external/egenix-mx/egenix-mx-base-2.1.0.tar.gz \
-	  ../external/jabber-py/jabberpy0.4-0.tar.gz \
-	  ../external/SOAPpy/SOAPpy-0.10.2.tar.gz \
-	  ../external/pychecker/pychecker-0.8.13.tar.gz \
-	  ../external/openssl/openssl0.9.7c.tar.gz
+ARCHIVES=../$(SNAP)-0.3-3.tar.gz \
+         ../wxPython-$(SNAP)-2.5-2.tar.gz \
+         ../PyLucene-$(SNAP)-0.3-1.tar.gz \
+         ../UUIDext-$(SNAP)-0.3-1.tar.gz
 
-.PHONY: $(DEPS)
+OS=$(shell uname)
 
-all: env $(DEPS) 
-	cd ../external; \
-	make expand; \
-	make
-	cd ../internal; \
-	make
+ifeq ($(findstring CYGWIN,$(OS)),CYGWIN)
+OS=Cygwin
+endif
 
+ifeq ($(DEBUG),1)
+SNAP=debug
+else
+SNAP=release
+endif
+
+ifeq ($(OS),Darwin)
+PLATFORM=macosx
+else
+ifeq ($(OS),Cygwin)
+PLATFORM=windows
+else
+PLATFORM=linux
+endif
+endif
+
+HOST=builds.osafoundation.org
+URL=http://$(HOST)/external/$(PLATFORM)
+
+.PHONY: install
+
+default: install
+
+downloads: $(ARCHIVES)
+
+$(ARCHIVES):
+	curl -o $@ $(URL)/$(notdir $@)
+
+install: $(ARCHIVES)
+	@for archive in $(ARCHIVES); \
+	do \
+            echo tar -C .. -xvzf $$archive; \
+            tar -C .. -xvzf $$archive; \
+	done
