--- a/internal/PyLucene/Makefile.linux
+++ b/internal/PyLucene/Makefile.linux
@@ -1,13 +1,13 @@
 
 ifeq ($(DEBUG),1)
 
-CCFLAGS = -O -g
+CCFLAGS = -O -g -fPIC
 LDFLAGS = -g
 mode = debug
 
 else
 
-CCFLAGS = -O2
+CCFLAGS = -O2 -fPIC
 LDFLAGS = 
 mode = release
 
@@ -68,6 +68,7 @@ $(BINDIR)/_PyLucene.so: $(OBJS) PyLucene_wrap.cxx
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.Db
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbTxn
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.Directory
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.FSDirectory
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.db.DbDirectory
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.Analyzer
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.standard.StandardAnalyzer
