Fixed the path to the DLLs in the Makefile
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2369 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/win/Makefile
+++ b/internal/launchers/win/Makefile
@@ -1,9 +1,11 @@
 include ../../Makefile.inc
 
+DLLS_DIR=libs
+
 ifeq ($(SNAP),debug)
-DLLS=win/msvcp71d.dll win/msvcr71d.dll win/msvcrtd.dll
+DLLS=$(DLLS_DIR)/msvcp71d.dll $(DLLS_DIR)/msvcr71d.dll $(DLLS_DIR)/msvcrtd.dll
 else
-DLLS=win/msvcp71.dll win/msvcr71.dll
+DLLS=$(DLLS_DIR)/msvcp71.dll $(DLLS_DIR)/msvcr71.dll
 endif
 
 build:	chandler.exe
